force-app/main/default/objects/Bank__c/fields/AccountNo__c.field-meta.xml
<CustomField>
    <fullName>AccountNo__c</fullName>
    <label>AccountNo.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>