force-app/main/default/objects/Bank__c/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <label>Bank Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>