force-app/main/default/objects/Bank__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <label>Contact Person</label>
    <length>30</length>
    <type>Text</type>
</CustomField>