force-app/main/default/objects/Bank__c/fields/FAAC_NO__c.field-meta.xml
<CustomField>
    <fullName>FAAC_NO__c</fullName>
    <label>FAAC NO.</label>
    <length>17</length>
    <type>Text</type>
</CustomField>