force-app/main/default/objects/Bank__c/fields/Master_Config__c.field-meta.xml
<CustomField>
    <fullName>Master_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Config</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Banks</relationshipLabel>
    <relationshipName>Banks</relationshipName>
    <type>Lookup</type>
</CustomField>